src/test/ui/impl-trait/issue-21659-show-relevant-trait-impls-3.stderr
error[E0599]: no method named `foo` found for type `Bar` in the current scope
  --> $DIR/issue-21659-show-relevant-trait-impls-3.rs:30:8
   |
30 |     f1.foo(1usize);
   |        ^^^
   |
   = help: items from traits can only be used if the trait is implemented and in scope; the following trait defines an item `foo`, perhaps you need to implement it:
           candidate #1: `Foo`

error: aborting due to previous error(s)

